--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_nfc_kit: ^3.3.1
   google_ml_kit: ^0.11.0
   intl: ^0.17.0
+  percent_indicator: ^4.2.2
 flutter_native_splash:
   color: "#000000"
   image: "assets/splash2.png"
